# api/controllers/collection/entities/dto/collection.dto.ts
@@ -1,0 +1,8 @@
+import { z } from "zod";
+
+// Schéma pour valider la création d'une collection(POST)
+export const createCollectionSchema = z.object({
+  label: z.string().min(1, { message: "Le nom de la collection est requis." }),
+});
+
+export type CreateCollectionDTO = z.infer<typeof createCollectionSchema>;
