# api/routes/publicAccess/collection.routes.ts
@@ -1,0 +1,7 @@
+import express from "express";
+import { getAllCollections } from "../../controllers/collection/collectionController.js";
+
+const router = express.Router();
+
+router.get("/", getAllCollections);
+export default router;
